--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/added.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
 	</head>
 	<body class="is-preload">
 
@@ -92,63 +93,103 @@
 		</section>
 
 		<!-- Three -->
-			
-
-			<section id="three" class="main style1 special">
+			<section id="two" class="main style1 special">
 				<div class="container">
 					<header class="major">
 						<h2>Skills</h2>
 					</header>
 					<div class="row gtr-150">
-						<div className="technologies">
-							<div className="technology-logos">
-								<div className="technology-logos-1">
-									<li><img width='10%' margin='1%' src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" /><span>JavaScript</span></li>
-									<img width='15%'margin='1%' src="https://upload.wikimedia.org/wikipedia/commons/4/47/React.svg" />
-									<img width='15%'margin='1%' src="https://upload.wikimedia.org/wikipedia/commons/archive/6/61/20170517184423%21HTML5_logo_and_wordmark.svg" />
-									<img margin='1%' id="css" src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" />
-								</div>
-								<div>
-									<img width='15%' margin='1%' src="https://upload.wikimedia.org/wikipedia/commons/6/62/Ruby_On_Rails_Logo.svg" />
-									<img width='15%' margin='1%' src="https://upload.wikimedia.org/wikipedia/commons/7/73/Ruby_logo.svg" />
-									<img width='15%' margin='1%' src="https://wiki.postgresql.org/images/a/a4/PostgreSQL_logo.3colors.svg" />
-									<img width='15%' margin='1%' src="https://upload.wikimedia.org/wikipedia/commons/9/96/Sass_Logo_Color.svg" />
-								</div>
-								<div>
-									<img width='20%' margin='1.5%' id="node" src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Node.js_logo.svg" />
-									<img width='20%' margin='1.5%' id="express" src="https://upload.wikimedia.org/wikipedia/commons/6/64/Expressjs.png" />
-									<img width='20%' margin='1.5%' id="mongo" src="https://upload.wikimedia.org/wikipedia/commons/9/93/MongoDB_Logo.svg" />
-								</div>
-								<div>
-									<img width='20%' margin='1.5%' id="git" src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Git-logo.svg" />
-									<img width='20%' margin='1.5%' id="webpack" src="https://upload.wikimedia.org/wikipedia/commons/9/94/Webpack.svg" />
-									<img width='20%' margin='1.5%' id="jQuery" src="https://upload.wikimedia.org/wikipedia/commons/f/fd/JQuery-Logo.svg" />
-								</div>
-							</div>
-						</div>
-				</div>
-			</section>
-			<section id="two" class="main style2">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
+						<div>
 							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
+								<li>
+									<span><img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/AWS_Simple_Icons_AWS_Cloud.svg" /></span>
+									<div>AWS</div>
+								</li>
+								<li>
+									<span><img src="https://upload.wikimedia.org/wikipedia/commons/0/02/Babel_Logo.svg" /></span>
+									<div>Babel</div>
+								</li>
+								<li>
+									<span><img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Html5_canvas_logo.png" /></span>
+									<div>Canvas</div>
+								</li>
+								<li>
+									<span><img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" /></span>
+									<div>CSS3</div>
+								</li>
+								<li>
+									<span><img src="images/expressjs.svg" /></span>
+									<div>Express</div>
+								</li>
+								<li>
+									<span><img src="images/git.png" /></span>
+									<div>Git</div>
+								</li>
+								<li>
+									<span><img src="images/heroku.png" /></span>
+									<div>Heroku</div>
+								</li>
+								<li>
+									<span><img src="https://upload.wikimedia.org/wikipedia/commons/archive/6/61/20170517184423%21HTML5_logo_and_wordmark.svg" /></span>
+									<div>HTML5</div>
+								</li>
+								<li>
+									<span><img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" /></span>
+									<div>JavaScript</div>
+								</li>
+								<li>
+									<span><img src="images/jquery.png" /></span>
+									<div>jQuery</div>
+								</li>
+								<li>
+									<span><img src="images/mongodb.png" /></span>
+									<div>MongoDB</div>
+								</li>
+								<li>
+									<span><img src="images/node.png" /></span>
+									<div>Node.js</div>
+								</li>
+								<li>
+									<span><img src="https://upload.wikimedia.org/wikipedia/commons/d/db/Npm-logo.svg" /></span>
+									<div>npm</div>
+								</li>
+								<li>
+									<span><img  src="https://wiki.postgresql.org/images/a/a4/PostgreSQL_logo.3colors.svg" /></span>
+									<div>PostgreSQL</div>
+								</li>
+								<li>
+									<span><img src="https://upload.wikimedia.org/wikipedia/commons/6/62/Ruby_On_Rails_Logo.svg" /></span>
+									<div>Rails</div>
+								</li>
+								<li>
+									<span><img src="https://upload.wikimedia.org/wikipedia/commons/4/47/React.svg"/></span>
+									<div>React</div>
+								</li>
+								<li>
+									<span><img  src="images/redux.png" /></span>
+									<div>Redux</div>
+								</li>
+								<li>
+									<span><img  src="https://upload.wikimedia.org/wikipedia/commons/7/73/Ruby_logo.svg" /></span>
+									<div>Ruby</div>
+								</li>
+								<li>
+									<span><img  src="https://upload.wikimedia.org/wikipedia/commons/9/96/Sass_Logo_Color.svg" /></span>
+									<div>Sass</div>
+								</li>
+								<li>
+									<span><img  src="images/sql.png" /></span>
+									<div>SQL</div>
+								</li>
+								<li>
+									<span><img  src="https://upload.wikimedia.org/wikipedia/commons/5/59/Visual_Studio_Icon_2019.svg" /></span>
+									<div>Visual Studio</div>
+								</li>
+								<li>
+									<span><img  src="images/webpack.png" /></span>
+									<div>Webpack</div>
+								</li>
 							</ul>
-						</div>
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
-							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
 						</div>
 					</div>
 				</div>
