--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 					<header class="major">
 						<h2>Skills</h2>
 					</header>
+					<br>
 					<div class="row gtr-150">
 						<div>
 							<ul class="major-icons">
@@ -124,6 +125,10 @@
 								<li>
 									<span><img src="images/git.png" /></span>
 									<div>Git</div>
+								</li>
+								<li>
+									<span><img src="images/github.png" /></span>
+									<div>GitHub</div>
 								</li>
 								<li>
 									<span><img src="images/heroku.png" /></span>
@@ -158,7 +163,7 @@
 									<div>PostgreSQL</div>
 								</li>
 								<li>
-									<span><img src="https://upload.wikimedia.org/wikipedia/commons/6/62/Ruby_On_Rails_Logo.svg" /></span>
+									<span><img src="images/ruby-on-rails.png" /></span>
 									<div>Rails</div>
 								</li>
 								<li>
@@ -168,6 +173,10 @@
 								<li>
 									<span><img  src="images/redux.png" /></span>
 									<div>Redux</div>
+								</li>
+								<li>
+									<span><img  src="images/rspec.png" /></span>
+									<div>Rspec</div>
 								</li>
 								<li>
 									<span><img  src="https://upload.wikimedia.org/wikipedia/commons/7/73/Ruby_logo.svg" /></span>
