--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Taylor Musolf</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="shortcut icon" type='image' href="images/tm_logo.png">
+		<link rel="shortcut icon" type='image' href="images/tm_logo2.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/added.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -43,11 +43,11 @@
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span><img height='400px' width="350px" src="images/taylor_musolf3.jpg" alt="" /></span> <br>
-							<li></li><a href="mailto: tcmusolf@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span> | tcmusolf@gmail.com</a></li>
-							<li><a href="https://github.com/taylormusolf" class="icon brands alt fa-github"><span class="label">GitHub</span> | GitHub</a></li>
-							<li><a href="https://www.linkedin.com/in/taylor-musolf" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span> | LinkedIn</a></li>
-							<li><a href="https://angel.co/u/taylor-musolf" class="icon brands alt fa-angellist"><span class="label">AngelList</span> | AngelList</a></li>
-							<li><a href="#" class="icon fa-file-alt"><span class="label">Résumé</span> | Résumé</a></li>
+							<li></li><a href="mailto: tcmusolf@gmail.com" class="icon solid alt fa-envelope" target="_blank"><span class="label">Email</span> | tcmusolf@gmail.com</a></li>
+							<li><a href="https://github.com/taylormusolf" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span> | GitHub</a></li>
+							<li><a href="https://www.linkedin.com/in/taylor-musolf" class="icon brands alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span> | LinkedIn</a></li>
+							<li><a href="https://angel.co/u/taylor-musolf" class="icon brands alt fa-angellist" target="_blank"><span class="label">AngelList</span> | AngelList</a></li>
+							<li><a href="assets/files/Resume_Musolf_Taylor.pdf" class="icon fa-file-alt" target="_blank"><span class="label">Résumé</span> | Résumé</a></li>
 						</div>
 					</div>
 				</div>
@@ -66,8 +66,8 @@
 						<h3>KickBacker</h3>
 						<p>A clone of Kickstarter, a crowdfunding platform that allows content creators to post their dream projects that they would like others to help bring to life by meeting their funding goal.</p>
 						<ul class="actions special">
-							<li><a href="https://kickbacker.herokuapp.com" class="button">Live</a></li>
-							<li><a href="https://github.com/taylormusolf/KickBacker" class="button">Repo</a></li>
+							<li><a href="https://kickbacker.herokuapp.com" class="button" target="_blank">Live</a></li>
+							<li><a href="https://github.com/taylormusolf/KickBacker" class="button" target="_blank">Repo</a></li>
 						</ul>
 					</div>
 					<div class="col-4 col-12-medium">
@@ -75,8 +75,8 @@
 						<h3>PetConnect</h3>
 						<p>A social media platform that allows pets to make friends in their neighborhood and find old friends from the same shelter.</p>
 						<ul class="actions special">
-							<li><a href="http://pet-connect-app.herokuapp.com/" class="button">Live</a></li>
-							<li><a href="https://github.com/vickiychung/PetConnect/" class="button">Repo</a></li>
+							<li><a href="http://pet-connect-app.herokuapp.com/" class="button" target="_blank">Live</a></li>
+							<li><a href="https://github.com/vickiychung/PetConnect/" class="button" target="_blank">Repo</a></li>
 						</ul>
 					</div>
 					<div class="col-4 col-12-medium">
@@ -84,8 +84,8 @@
 						<h3>Dyno</h3>
 						<p>A rock climbing themed platforming game where you can climb cave walls and dynamically jump from rock face to rock to reach the cave exit to find your friends.</p>
 						<ul class="actions special">
-							<li><a href="https://taylormusolf.github.io/Dyno/" class="button">Live</a></li>
-							<li><a href="https://github.com/taylormusolf/Dyno" class="button">Repo</a></li>
+							<li><a href="https://taylormusolf.github.io/Dyno/" class="button" target="_blank">Live</a></li>
+							<li><a href="https://github.com/taylormusolf/Dyno" class="button" target="_blank">Repo</a></li>
 						</ul>
 					</div>
 				</div>
@@ -93,7 +93,7 @@
 		</section>
 
 		<!-- Three -->
-			<section id="two" class="main style1 special">
+			<section id="one" class="main style1 special">
 				<div class="container">
 					<header class="major">
 						<h2>Skills</h2>
@@ -231,7 +231,7 @@
 						<h2>Résumé</h2>
 					</header>
 					<ul class="actions special">
-						<li><a href="#" class="button wide primary">Open</a></li>
+						<li><a href="assets/files/Resume_Musolf_Taylor.pdf" class="button wide primary" target="_blank">Open in new tab</a></li>
 					</ul>
 				</div>
 			</section>
@@ -239,10 +239,10 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="mailto: tcmusolf@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					<li><a href="https://github.com/taylormusolf" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/taylor-musolf-4454a876/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-					<li><a href="https://angel.co/u/taylor-musolf" class="icon brands alt fa-angellist"><span class="label">AngelList</span></a></li>
+					<li><a href="mailto: tcmusolf@gmail.com" class="icon solid alt fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+					<li><a href="https://github.com/taylormusolf" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/taylor-musolf-4454a876/" class="icon brands alt fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
+					<li><a href="https://angel.co/u/taylor-musolf" class="icon brands alt fa-angellist" target="_blank"><span class="label">AngelList</span></a></li>
 					
 				</ul>
 				<ul class="copyright">
