Add link on project names and images to live link

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 				<p>Check out what I have been working on</p>
 				<div class="row gtr-150">
 					<div class="col-4 col-12-medium">
-						<span class="image fit"><img src="images/kickbacker.PNG" alt="" /></span>
-						<h3>KickBacker</h3>
+						<span class="image fit"><a href="https://github.com/taylormusolf/KickBacker" target="_blank"><img src="images/kickbacker.PNG" alt="" /></a></span>
+						<h3><a href="https://github.com/taylormusolf/KickBacker" target="_blank">KickBacker</a></h3>
 						<p>A clone of Kickstarter, a crowdfunding platform that allows content creators to post their dream projects that they would like others to help bring to life by meeting their funding goal.</p>
 						<ul class="actions special">
 							<li><a href="https://kickbacker.herokuapp.com" class="button" target="_blank">Live</a></li>
@@ -71,8 +71,8 @@
 						</ul>
 					</div>
 					<div class="col-4 col-12-medium">
-						<span class="image fit"><img height="200%" src="images/pet_connect2.PNG" alt="" /></span>
-						<h3>PetConnect</h3>
+						<span class="image fit"><a href="https://github.com/vickiychung/PetConnect/" target="_blank"><img height="200%" src="images/pet_connect2.PNG" alt="" /></a></span>
+						<h3><a href="https://github.com/vickiychung/PetConnect/" target="_blank">PetConnect</a></h3>
 						<p>A social media platform that allows pets to make friends in their neighborhood and find old friends from the same shelter.</p>
 						<ul class="actions special">
 							<li><a href="http://pet-connect-app.herokuapp.com/" class="button" target="_blank">Live</a></li>
@@ -80,8 +80,8 @@
 						</ul>
 					</div>
 					<div class="col-4 col-12-medium">
-						<span class="image fit"><img src="images/dyno.PNG" alt="" /></span>
-						<h3>Dyno</h3>
+						<span class="image fit"><a href="https://taylormusolf.github.io/Dyno/" target="_blank"><img src="images/dyno.PNG" alt="" /></a></span>
+						<h3><a href="https://taylormusolf.github.io/Dyno/" target="_blank">Dyno</a></h3>
 						<p>A rock climbing themed platforming game where you can climb cave walls and dynamically jump from rock face to rock to reach the cave exit to find your friends.</p>
 						<ul class="actions special">
 							<li><a href="https://taylormusolf.github.io/Dyno/" class="button" target="_blank">Live</a></li>
