--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 		<link rel="stylesheet" href="assets/css/added.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
+		<meta property="og:title" content="Taylor Musolf - Portfolio" />
+    <meta property="og:image" content="./src/assets/images/taylor_musolf.jpg" />
+    <meta
+      property="og:description"
+      content="I am a full stack software engineer and am passionate about developing new applications that are streamlined, beautiful to look at, and overall a joy to use."
+    />
+    <meta
+      property="og:url"
+      content="http://taylormusolf.com/"
+    />
 	</head>
 	<body class="is-preload">
 
@@ -37,7 +47,7 @@
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
-							<p>I am an aspiring full stack software engineer and am passionate about developing new applications that are streamlined, beautiful to look at, and overall a joy to use. </p>
+							<p>I am a full stack software engineer that is passionate about developing new applications that are streamlined, beautiful to look at, and overall a joy to use. </p>
 							<p>I'm most excited when I'm solving problems. I got into tech because I was curious about the ingenuity and creativity that goes into how things work. </p>	
 							<p>I am an avid board gamer, which has built in me my love for optimizing efficiency to maximize the chance of victory. Let me if you want to chat about code or if you have any game recommendations!</p>
 						</div>
