Minor mobile update

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 							<p>I'm most excited when I'm solving problems. I got into tech because I was curious about the ingenuity and creativity that goes into how things work. </p>	
 							<p>I am an avid board gamer, which has built in me my love for optimizing efficiency to maximize the chance of victory. Let me if you want to chat about code or if you have any game recommendations!</p>
 						</div>
-						<div class="col-6 col-12-medium imp-medium">
+						<div class="col-6 col-12-medium imp-medium about-me-pic">
 							<span><img height='400px' width="350px" src="images/taylor_musolf3.jpg" alt="" /></span> <br>
-							<li></li><a href="mailto: tcmusolf@gmail.com" class="icon solid alt fa-envelope" target="_blank"><span class="label">Email</span> | tcmusolf@gmail.com</a></li>
+							<li><a href="mailto: tcmusolf@gmail.com" class="icon solid alt fa-envelope" target="_blank"><span class="label">Email</span> | tcmusolf@gmail.com</a></li>
 							<li><a href="https://github.com/taylormusolf" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span> | GitHub</a></li>
 							<li><a href="https://www.linkedin.com/in/taylor-musolf" class="icon brands alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span> | LinkedIn</a></li>
 							<li><a href="https://angel.co/u/taylor-musolf" class="icon brands alt fa-angellist" target="_blank"><span class="label">AngelList</span> | AngelList</a></li>
