--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							</header>
 							<p>I am a full stack software engineer that is passionate about developing new applications that are streamlined, beautiful to look at, and overall a joy to use. </p>
 							<p>I'm most excited when I'm solving problems. I got into tech because I was curious about the ingenuity and creativity that goes into how things work. </p>	
-							<p>I am an avid board gamer, which has built in me my love for optimizing efficiency to maximize the chance of victory. Let me if you want to chat about code or if you have any game recommendations!</p>
+							<p>I am an avid board gamer, which has built in me my love for optimizing efficiency to maximize the chance of victory. Let me know if you want to chat about code or if you have any game recommendations!</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium about-me-pic">
 							<span><img height='400px' width="350px" src="images/taylor_musolf3.jpg" alt="" /></span> <br>
