Add chatai and updated resume

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<li><a href="mailto: tcmusolf@gmail.com" class="icon solid alt fa-envelope" target="_blank"><span class="label">Email</span> | tcmusolf@gmail.com</a></li>
 							<li><a href="https://github.com/taylormusolf" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span> | GitHub</a></li>
 							<li><a href="https://www.linkedin.com/in/taylor-musolf" class="icon brands alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span> | LinkedIn</a></li>
-							<li><a href="https://angel.co/u/taylor-musolf" class="icon brands alt fa-angellist" target="_blank"><span class="label">AngelList</span> | AngelList</a></li>
+							<li><a href="https://wellfound.com/u/taylor-musolf" class="icon brands alt fa-angellist" target="_blank"><span class="label">Wellfound</span> | AngelList</a></li>
 							<li><a href="assets/files/Resume_Musolf_Taylor.pdf" class="icon fa-file-alt" target="_blank"><span class="label">Résumé</span> | Résumé</a></li>
 						</div>
 					</div>
@@ -72,8 +72,17 @@
 				<p>Check out what I have been working on</p>
 				<div class="row gtr-150">
 					<div class="col-4 col-12-medium">
-						<span class="image fit"><a href="https://github.com/taylormusolf/KickBacker" target="_blank"><img src="images/kickbacker.PNG" alt="" /></a></span>
-						<h3><a href="https://github.com/taylormusolf/KickBacker" target="_blank">KickBacker</a></h3>
+						<span class="image fit"><a href="https://chat-ai-46f1a8b5ba43.herokuapp.com/" target="_blank"><img height="200%" src="images/chatai.PNG" alt="chatai" /></a></span>
+						<h3><a href="https://chat-ai-46f1a8b5ba43.herokuapp.com/" target="_blank">ChatAi</a></h3>
+						<p>A platform where you can create your own chatbot with whatever personality you like. You can chat your own creations or with ones built by other users.</p>
+						<ul class="actions special">
+							<li><a href="https://chat-ai-46f1a8b5ba43.herokuapp.com/" class="button" target="_blank">Live</a></li>
+							<li><a href="https://github.com/taylormusolf/ChatAi" class="button" target="_blank">Repo</a></li>
+						</ul>
+					</div>
+					<div class="col-4 col-12-medium">
+						<span class="image fit"><a href="https://kickbacker.herokuapp.com" target="_blank"><img src="images/kickbacker.PNG" alt="kickbacker" /></a></span>
+						<h3><a href="https://kickbacker.herokuapp.com" target="_blank">KickBacker</a></h3>
 						<p>A clone of Kickstarter, a crowdfunding platform that allows content creators to post their dream projects that they would like others to help bring to life by meeting their funding goal.</p>
 						<ul class="actions special">
 							<li><a href="https://kickbacker.herokuapp.com" class="button" target="_blank">Live</a></li>
@@ -81,16 +90,7 @@
 						</ul>
 					</div>
 					<div class="col-4 col-12-medium">
-						<span class="image fit"><a href="https://github.com/vickiychung/PetConnect/" target="_blank"><img height="200%" src="images/pet_connect2.PNG" alt="" /></a></span>
-						<h3><a href="https://github.com/vickiychung/PetConnect/" target="_blank">PetConnect</a></h3>
-						<p>A social media platform that allows pets to make friends in their neighborhood and find old friends from the same shelter.</p>
-						<ul class="actions special">
-							<li><a href="http://pet-connect-app.herokuapp.com/" class="button" target="_blank">Live</a></li>
-							<li><a href="https://github.com/vickiychung/PetConnect/" class="button" target="_blank">Repo</a></li>
-						</ul>
-					</div>
-					<div class="col-4 col-12-medium">
-						<span class="image fit"><a href="https://taylormusolf.github.io/Dyno/" target="_blank"><img src="images/dyno.PNG" alt="" /></a></span>
+						<span class="image fit"><a href="https://taylormusolf.github.io/Dyno/" target="_blank"><img src="images/dyno.PNG" alt="dyno" /></a></span>
 						<h3><a href="https://taylormusolf.github.io/Dyno/" target="_blank">Dyno</a></h3>
 						<p>A rock climbing themed platforming game where you can climb cave walls and dynamically jump from rock face to rock to reach the cave exit to find your friends.</p>
 						<ul class="actions special">
@@ -252,7 +252,7 @@
 					<li><a href="mailto: tcmusolf@gmail.com" class="icon solid alt fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 					<li><a href="https://github.com/taylormusolf" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.linkedin.com/in/taylor-musolf-4454a876/" class="icon brands alt fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
-					<li><a href="https://angel.co/u/taylor-musolf" class="icon brands alt fa-angellist" target="_blank"><span class="label">AngelList</span></a></li>
+					<li><a href="https://wellfound.com/u/taylor-musolf" class="icon brands alt fa-angellist" target="_blank"><span class="label">Wellfound</span></a></li>
 					
 				</ul>
 				<ul class="copyright">
