update about me and skills

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 								<h2>About Me</h2>
 							</header>
 							<p>I am a full stack software engineer that is passionate about developing new applications that are streamlined, beautiful to look at, and overall a joy to use. </p>
+							<p>I worked as a software engineering instructor for 2 years and got the opportunity to mentor aspiring software engineers through their first steps in the world of programming. Helping others has always been a passion of mine and there was always more for me to learn along with them everyday. </p>
 							<p>I'm most excited when I'm solving problems. I got into tech because I was curious about the ingenuity and creativity that goes into how things work. </p>	
 							<p>I am an avid board gamer, which has built in me my love for optimizing efficiency to maximize the chance of victory. Let me know if you want to chat about code or if you have any game recommendations!</p>
 						</div>
@@ -169,8 +170,16 @@
 									<div>npm</div>
 								</li>
 								<li>
+									<span><img src="images/openai.png" /></span>
+									<div>OpenAI API</div>
+								</li>
+								<li>
 									<span><img  src="https://wiki.postgresql.org/images/a/a4/PostgreSQL_logo.3colors.svg" /></span>
 									<div>PostgreSQL</div>
+								</li>
+								<li>
+									<span><img  src="images/python.png" /></span>
+									<div>Python</div>
 								</li>
 								<li>
 									<span><img src="images/ruby-on-rails.png" /></span>
@@ -199,6 +208,10 @@
 								<li>
 									<span><img  src="images/sql.png" /></span>
 									<div>SQL</div>
+								</li>
+								<li>
+									<span><img  src="images/typescript.png" /></span>
+									<div>TypeScript</div>
 								</li>
 								<li>
 									<span><img  src="https://upload.wikimedia.org/wikipedia/commons/5/59/Visual_Studio_Icon_2019.svg" /></span>
