--- a/index.html
+++ b/index.html
@@ -73,30 +73,30 @@
 				<p>Check out what I have been working on</p>
 				<div class="row gtr-150">
 					<div class="col-4 col-12-medium">
-						<span class="image fit"><a href="https://chat-ai-46f1a8b5ba43.herokuapp.com/" target="_blank"><img height="200%" src="images/chatai.PNG" alt="chatai" /></a></span>
-						<h3><a href="https://chat-ai-46f1a8b5ba43.herokuapp.com/" target="_blank">ChatAi</a></h3>
+						<span class="image fit"><a href="https://chatai.taylormusolf.com/" target="_blank"><img height="200%" src="images/chatai.PNG" alt="chatai" /></a></span>
+						<h3><a href="https://chatai.taylormusolf.com/" target="_blank">ChatAi</a></h3>
 						<p>A platform where you can create your own chatbot with whatever personality you like. You can chat your own creations or with ones built by other users.</p>
 						<ul class="actions special">
-							<li><a href="https://chat-ai-46f1a8b5ba43.herokuapp.com/" class="button" target="_blank">Live</a></li>
+							<li><a href="https://chatai.taylormusolf.com/" class="button" target="_blank">Live</a></li>
 							<li><a href="https://github.com/taylormusolf/ChatAi" class="button" target="_blank">Repo</a></li>
 						</ul>
 					</div>
 					<div class="col-4 col-12-medium">
-						<span class="image fit"><a href="https://kickbacker.herokuapp.com" target="_blank"><img src="images/kickbacker.PNG" alt="kickbacker" /></a></span>
-						<h3><a href="https://kickbacker.herokuapp.com" target="_blank">KickBacker</a></h3>
+						<span class="image fit"><a href="https://kickbacker.taylormusolf.com/" target="_blank"><img src="images/kickbacker.PNG" alt="kickbacker" /></a></span>
+						<h3><a href="https://kickbacker.taylormusolf.com/" target="_blank">KickBacker</a></h3>
 						<p>A clone of Kickstarter, a crowdfunding platform that allows content creators to post their dream projects that they would like others to help bring to life by meeting their funding goal.</p>
 						<ul class="actions special">
-							<li><a href="https://kickbacker.herokuapp.com" class="button" target="_blank">Live</a></li>
+							<li><a href="https://kickbacker.taylormusolf.com/" class="button" target="_blank">Live</a></li>
 							<li><a href="https://github.com/taylormusolf/KickBacker" class="button" target="_blank">Repo</a></li>
 						</ul>
 					</div>
 					<div class="col-4 col-12-medium">
-						<span class="image fit"><a href="https://taylormusolf.github.io/Dyno/" target="_blank"><img src="images/dyno.PNG" alt="dyno" /></a></span>
-						<h3><a href="https://taylormusolf.github.io/Dyno/" target="_blank">Dyno</a></h3>
+						<span class="image fit"><a href="https://dyno.taylormusolf.com/" target="_blank"><img src="images/dyno.PNG" alt="dyno" /></a></span>
+						<h3><a href="https://dyno.taylormusolf.com/" target="_blank">Dyno</a></h3>
 						<p>A rock climbing themed platforming game where you can climb cave walls and dynamically jump from rock face to rock to reach the cave exit to find your friends.</p>
 						<ul class="actions special">
 							<li><a href="https://taylormusolf.github.io/Dyno/" class="button" target="_blank">Live</a></li>
-							<li><a href="https://github.com/taylormusolf/Dyno" class="button" target="_blank">Repo</a></li>
+							<li><a href="https://dyno.taylormusolf.com/" class="button" target="_blank">Repo</a></li>
 						</ul>
 					</div>
 				</div>
