Update skill and dyno repo link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<p>A rock climbing themed platforming game where you can climb cave walls and dynamically jump from rock face to rock to reach the cave exit to find your friends.</p>
 						<ul class="actions special">
 							<li><a href="https://taylormusolf.github.io/Dyno/" class="button" target="_blank">Live</a></li>
-							<li><a href="https://dyno.taylormusolf.com/" class="button" target="_blank">Repo</a></li>
+							<li><a href="https://github.com/taylormusolf/Dyno" class="button" target="_blank">Repo</a></li>
 						</ul>
 					</div>
 				</div>
@@ -177,10 +177,10 @@
 									<span><img  src="https://wiki.postgresql.org/images/a/a4/PostgreSQL_logo.3colors.svg" /></span>
 									<div>PostgreSQL</div>
 								</li>
-								<li>
+								<!-- <li>
 									<span><img  src="images/python.png" /></span>
 									<div>Python</div>
-								</li>
+								</li> -->
 								<li>
 									<span><img src="images/ruby-on-rails.png" /></span>
 									<div>Rails</div>
@@ -209,10 +209,10 @@
 									<span><img  src="images/sql.png" /></span>
 									<div>SQL</div>
 								</li>
-								<li>
+								<!-- <li>
 									<span><img  src="images/typescript.png" /></span>
 									<div>TypeScript</div>
-								</li>
+								</li> -->
 								<li>
 									<span><img  src="https://upload.wikimedia.org/wikipedia/commons/5/59/Visual_Studio_Icon_2019.svg" /></span>
 									<div>Visual Studio</div>
