--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		<title>Taylor Musolf</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="shortcut icon" type='image' href="images/tm_logo2.png">
+		<link rel="shortcut icon" type='image' href="images/tm_logo3.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/added.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
 		<meta property="og:title" content="Taylor Musolf - Portfolio" />
-    <meta property="og:image" content="./src/assets/images/taylor_musolf.jpg" />
+    <meta property="og:image" content="./src/assets/images/taylor_musolf4.jpg" />
     <meta
       property="og:description"
       content="I am a full stack software engineer and am passionate about developing new applications that are streamlined, beautiful to look at, and overall a joy to use."
@@ -30,7 +30,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span><img height="300px" src='images/taylor_musolf.jpg'/></span>
+					<span><img height="400px" src='images/taylor_musolf4.jpg'/></span>
 					<h1>Hi, I'm <strong>Taylor Musolf</strong></h1>
 					<p>A Fullstack Software Engineer</p>
 					<ul class="actions special">
@@ -53,7 +53,7 @@
 							<p>I am an avid board gamer, which has built in me my love for optimizing efficiency to maximize the chance of victory. Let me know if you want to chat about code or if you have any game recommendations!</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium about-me-pic">
-							<span><img height='400px' width="350px" src="images/taylor_musolf3.jpg" alt="" /></span> <br>
+							<span><img height='400px' src="images/taylor_musolf5.jpg" alt="" /></span> <br>
 							<li><a href="mailto: tcmusolf@gmail.com" class="icon solid alt fa-envelope" target="_blank"><span class="label">Email</span> | tcmusolf@gmail.com</a></li>
 							<li><a href="https://github.com/taylormusolf" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span> | GitHub</a></li>
 							<li><a href="https://www.linkedin.com/in/taylor-musolf" class="icon brands alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span> | LinkedIn</a></li>
