Update index.html with correct kickbacker url

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<h3><a href="https://kickbacker.taylormusolf.com/" target="_blank">KickBacker</a></h3>
 						<p>A clone of Kickstarter, a crowdfunding platform that allows content creators to post their dream projects that they would like others to help bring to life by meeting their funding goal.</p>
 						<ul class="actions special">
-							<li><a href="https://kickbacker.taylormusolf.com/" class="button" target="_blank">Live</a></li>
+							<li><a href="https://kickbacker.herokuapp.com/" class="button" target="_blank">Live</a></li>
 							<li><a href="https://github.com/taylormusolf/KickBacker" class="button" target="_blank">Repo</a></li>
 						</ul>
 					</div>
